# pyprestascan

./: .gitignore  AI_INTEGRATION.md  BUG_FIXES_APPLIED.md  CONTRIBUTING.md  FIXES_APPLIED.md  GUIDA_INTERFACCIA.md  README.md  README_DEMO.md  ROADMAP.md  demo_gui.py  pyprestascan_gui.py  pyproject.toml  pytest.ini  requirements-gui.txt  requirements-minimal.txt  requirements.txt  run_gui.py  start_demo.sh  test_gui_features.py
.github/workflows/: publish.yml
pyprestascan/core/: analyzer.py  crawler.py  exporters.py  fetcher.py  fixer.py  parser.py  storage.py
pyprestascan/gui/: __init__.py  main_window.py  real_gui.py
pyprestascan/integrations/: __init__.py
pyprestascan/reports/templates/: report.html.j2
reports/: images_missing_alt.csv  issues.csv  pages.csv  report.html  report.json
website/: README.md  index.html  robots.txt  script.js  sitemap.xml  style.css
