[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprestascan"
version = "1.0.0"
description = "CLI per analisi SEO specializzata di e-commerce PrestaShop"
authors = [{name = "PyPrestaScan", email = "pyprestascan@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["seo", "prestashop", "ecommerce", "crawler", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx[brotli]>=0.25.0",
    "aiolimiter>=1.1.0",
    "selectolax>=0.3.17",
    "lxml>=4.9.3",
    "urllib3>=2.0.0",
    "reppy>=0.4.0",
    "jinja2>=3.1.2",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "aiosqlite>=0.19.0",
    "click>=8.1.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pyinstaller>=6.0.0"
]
gui = [
    "PySide6>=6.6.0"
]

[project.scripts]
pyprestascan = "pyprestascan.__main__:main"
pyprestascan-gui = "pyprestascan.gui.app:main"

[project.urls]
Homepage = "https://github.com/pyprestascan/pyprestascan"
Repository = "https://github.com/pyprestascan/pyprestascan"
Issues = "https://github.com/pyprestascan/pyprestascan/issues"

[tool.setuptools.packages.find]
include = ["pyprestascan*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=pyprestascan --cov-report=term-missing"